cbits/Bullet.h

float btCapsuleShape_getHalfHeight(void *c); //method: getHalfHeight ::btScalar ( ::btCapsuleShape::* )(  ) const
void btCapsuleShape_setMargin(void *c,float p0); //method: setMargin void ( ::btCapsuleShape::* )( ::btScalar ) 
void btCapsuleShape_getAabb(void *c,float* p0,float* p1,float* p2); //method: getAabb void ( ::btCapsuleShape::* )( ::btTransform const &,::btVector3 &,::btVector3 & ) const
char const * btCapsuleShape_serialize(void *c,void* p0,void* p1); //method: serialize char const * ( ::btCapsuleShape::* )( void *,::btSerializer * ) const
void btCapsuleShape_localGetSupportingVertexWithoutMargin(void *c,float* p0,float* ret); //method: localGetSupportingVertexWithoutMargin ::btVector3 ( ::btCapsuleShape::* )( ::btVector3 const & ) const
float btCapsuleShape_getRadius(void *c); //method: getRadius ::btScalar ( ::btCapsuleShape::* )(  ) const
void btCapsuleShape_m_upAxis_set(void *c,int a); //attribute: int btCapsuleShape->m_upAxis
int btCapsuleShape_m_upAxis_get(void *c); //attribute: int btCapsuleShape->m_upAxis
void* btCapsuleShapeData_new(); //constructor: btCapsuleShapeData  ( ::btCapsuleShapeData::* )(  ) 
void btCapsuleShapeData_free(void *c);
 
void btCapsuleShapeData_m_convexInternalShapeData_set(void *c,void* a); //attribute: ::btConvexInternalShapeData btCapsuleShapeData->m_convexInternalShapeData
void* btCapsuleShapeData_m_convexInternalShapeData_get(void *c); //attribute: ::btConvexInternalShapeData btCapsuleShapeData->m_convexInternalShapeData
void btCapsuleShapeData_m_upAxis_set(void *c,int a); //attribute: int btCapsuleShapeData->m_upAxis
int btCapsuleShapeData_m_upAxis_get(void *c); //attribute: int btCapsuleShapeData->m_upAxis
// attribute not supported: //attribute: char[4] btCapsuleShapeData->m_padding
void* btCapsuleShapeX_new(float p0,float p1); //constructor: btCapsuleShapeX  ( ::btCapsuleShapeX::* )( ::btScalar,::btScalar ) 
void btCapsuleShapeX_free(void *c);
 
char const * btCapsuleShapeX_getName(void *c); //method: getName char const * ( ::btCapsuleShapeX::* )(  ) const
void* btCapsuleShapeZ_new(float p0,float p1); //constructor: btCapsuleShapeZ  ( ::btCapsuleShapeZ::* )( ::btScalar,::btScalar ) 
void btCapsuleShapeZ_free(void *c);
 
char const * btCapsuleShapeZ_getName(void *c); //method: getName char const * ( ::btCapsuleShapeZ::* )(  ) const
void* btCharIndexTripletData_new(); //constructor: btCharIndexTripletData  ( ::btCharIndexTripletData::* )(  ) 
void btCharIndexTripletData_free(void *c);
 
// attribute not supported: //attribute: unsigned char[3] btCharIndexTripletData->m_values
void btCharIndexTripletData_m_pad_set(void *c,char a); //attribute: char btCharIndexTripletData->m_pad
char btCharIndexTripletData_m_pad_get(void *c); //attribute: char btCharIndexTripletData->m_pad
void btCollisionShape_calculateLocalInertia(void *c,float p0,float* p1); //method: calculateLocalInertia void ( ::btCollisionShape::* )( ::btScalar,::btVector3 & ) const
void btCollisionShape_setUserPointer(void *c,void* p0); //method: setUserPointer void ( ::btCollisionShape::* )( void * ) 
char const * btCollisionShape_serialize(void *c,void* p0,void* p1); //method: serialize char const * ( ::btCollisionShape::* )( void *,::btSerializer * ) const
void btCollisionShape_getLocalScaling(void *c,float* ret); //method: getLocalScaling ::btVector3 const & ( ::btCollisionShape::* )(  ) const