Physics/Bullet/Raw/BulletCollision/CollisionShapes.chs

{#fun btCapsuleShape_getHalfHeight as btCapsuleShape_getHalfHeight    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#46>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_setMargin as btCapsuleShape_setMargin    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ collisionMargin
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#58>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_getAabb as btCapsuleShape_getAabb    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, withTransform* `Transform'  peekTransform* -- ^ t
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#58>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_getAabb as btCapsuleShape_getAabb'    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ t
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#162>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_serialize as btCapsuleShape_serialize    `( BtCapsuleShapeClass bc , BtSerializerClass p1 )' =>     { withBt* `bc'  -- ^ 
, withVoidPtr* `VoidPtr'  -- ^ dataBuffer
, withBt* `p1'  -- ^ serializer
 } ->  `String'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#42>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_localGetSupportingVertexWithoutMargin as btCapsuleShape_localGetSupportingVertexWithoutMargin    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ vec
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#42>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_localGetSupportingVertexWithoutMargin as btCapsuleShape_localGetSupportingVertexWithoutMargin'    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ vec
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#81>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_getRadius as btCapsuleShape_getRadius    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#29>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_m_upAxis_set    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#29>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_m_upAxis_get    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * btCapsuleShapeData
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#148>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShapeData_new as btCapsuleShapeData    {  } -> `BtCapsuleShapeData' mkBtCapsuleShapeData* #}
{#fun btCapsuleShapeData_free    `( BtCapsuleShapeDataClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#149>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShapeData_m_convexInternalShapeData_set    `( BtCapsuleShapeDataClass bc , BtConvexInternalShapeDataClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#149>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShapeData_m_convexInternalShapeData_get    `( BtCapsuleShapeDataClass bc )' =>     { withBt* `bc'  } ->  `BtConvexInternalShapeData'  mkBtConvexInternalShapeData* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#151>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShapeData_m_upAxis_set    `( BtCapsuleShapeDataClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#151>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShapeData_m_upAxis_get    `( BtCapsuleShapeDataClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * btCapsuleShapeX
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#118>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShapeX_new as btCapsuleShapeX    {   `Float' ,  `Float'  } -> `BtCapsuleShapeX' mkBtCapsuleShapeX* #}
{#fun btCapsuleShapeX_free    `( BtCapsuleShapeXClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#121>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShapeX_getName as btCapsuleShapeX_getName    `( BtCapsuleShapeXClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `String'   #}
-- * btCapsuleShapeZ
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#135>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShapeZ_new as btCapsuleShapeZ    {   `Float' ,  `Float'  } -> `BtCapsuleShapeZ' mkBtCapsuleShapeZ* #}
{#fun btCapsuleShapeZ_free    `( BtCapsuleShapeZClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#138>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShapeZ_getName as btCapsuleShapeZ_getName    `( BtCapsuleShapeZClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `String'   #}
-- * btCharIndexTripletData
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btStridingMeshInterface.h?r=2223#120>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp?r=2223>
-}
{#fun btCharIndexTripletData_new as btCharIndexTripletData    {  } -> `BtCharIndexTripletData' mkBtCharIndexTripletData* #}
{#fun btCharIndexTripletData_free    `( BtCharIndexTripletDataClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btStridingMeshInterface.h?r=2223#122>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp?r=2223>
-}
{#fun btCharIndexTripletData_m_pad_set    `( BtCharIndexTripletDataClass bc )' =>     { withBt* `bc' , castCharToCChar `Char'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btStridingMeshInterface.h?r=2223#122>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp?r=2223>
-}
{#fun btCharIndexTripletData_m_pad_get    `( BtCharIndexTripletDataClass bc )' =>     { withBt* `bc'  } ->  `Char'  castCCharToChar #}
-- * btCollisionShape
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCollisionShape.h?r=2223#101>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCollisionShape.cpp?r=2223>
-}
{#fun btCollisionShape_calculateLocalInertia as btCollisionShape_calculateLocalInertia    `( BtCollisionShapeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ mass
, withVec3* `Vec3'  peekVec3* -- ^ inertia
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCollisionShape.h?r=2223#101>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCollisionShape.cpp?r=2223>
-}
{#fun btCollisionShape_calculateLocalInertia as btCollisionShape_calculateLocalInertia'    `( BtCollisionShapeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ mass
, allocaVec3-  `Vec3'  peekVec3* -- ^ inertia
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCollisionShape.h?r=2223#115>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCollisionShape.cpp?r=2223>
-}
{#fun btCollisionShape_setUserPointer as btCollisionShape_setUserPointer    `( BtCollisionShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, withVoidPtr* `VoidPtr'  -- ^ userPtr
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCollisionShape.h?r=2223#128>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCollisionShape.cpp?r=2223>
-}
{#fun btCollisionShape_serialize as btCollisionShape_serialize    `( BtCollisionShapeClass bc , BtSerializerClass p1 )' =>     { withBt* `bc'  -- ^ 
, withVoidPtr* `VoidPtr'  -- ^ dataBuffer
, withBt* `p1'  -- ^ serializer
 } ->  `String'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCollisionShape.h?r=2223#100>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCollisionShape.cpp?r=2223>
-}
{#fun btCollisionShape_getLocalScaling as btCollisionShape_getLocalScaling    `( BtCollisionShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCollisionShape.h?r=2223#142>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCollisionShape.cpp?r=2223>
-}
